bindings/rust/idax-sys/shim/idax_shim.h

/** Free a malloc'd string returned by an idax function. */
void idax_free_string(char* s);
/* ═══════════════════════════════════════════════════════════════════════════
 * Segment (ida::segment)
 * ═══════════════════════════════════════════════════════════════════════════ */

/** Flat C representation of a segment snapshot. */
typedef struct IdaxSegment {
    uint64_t start;
    uint64_t end;
    int      bitness;
    int      type;         /**< ida::segment::Type enum as int */
    int      perm_read;
    int      perm_write;
    int      perm_exec;
    char*    name;         /**< malloc'd, free with idax_free_string */
    char*    class_name;   /**< malloc'd, free with idax_free_string */
    int      visible;
} IdaxSegment;
/** Owned semantic segment-register descriptor. */
typedef struct IdaxSegmentRegisterDescriptor {
    char* name;
    size_t bit_width;
    int is_code;
    int is_data;
} IdaxSegmentRegisterDescriptor;
/** Copied half-open segment-register range; source uses the public enum order. */
typedef struct IdaxSegmentRegisterRange {
    uint64_t start;
    uint64_t end;
    int has_value;
    uint64_t value;
    int source;
} IdaxSegmentRegisterRange;
/** Free strings inside an IdaxSegment (does NOT free the struct itself). */
void idax_segment_free(IdaxSegment* seg);
void idax_segment_register_descriptors_free(
    IdaxSegmentRegisterDescriptor* values, size_t count);
void idax_segment_register_ranges_free(IdaxSegmentRegisterRange* values);
int idax_segment_at(uint64_t ea, IdaxSegment* out);
int idax_segment_by_name(const char* name, IdaxSegment* out);
int idax_segment_by_index(size_t index, IdaxSegment* out);
int idax_segment_count(size_t* out);
int idax_segment_create(uint64_t start, uint64_t end, const char* name,
                        const char* class_name, int type);
int idax_segment_remove(uint64_t ea);
int idax_segment_set_name(uint64_t ea, const char* name);
int idax_segment_set_class(uint64_t ea, const char* class_name);
int idax_segment_set_type(uint64_t ea, int type);
int idax_segment_set_permissions(uint64_t ea, int read, int write, int exec);
int idax_segment_set_bitness(uint64_t ea, int bits);
int idax_segment_comment(uint64_t ea, int repeatable, char** out);
int idax_segment_set_comment(uint64_t ea, const char* text, int repeatable);
int idax_segment_resize(uint64_t ea, uint64_t new_start, uint64_t new_end);
int idax_segment_move(uint64_t ea, uint64_t new_start);
int idax_segment_next(uint64_t ea, IdaxSegment* out);
int idax_segment_prev(uint64_t ea, IdaxSegment* out);
int idax_segment_set_default_segment_register(uint64_t ea, int register_index,
                                              uint64_t value);
int idax_segment_set_default_segment_register_for_all(int register_index,
                                                      uint64_t value);
int idax_segment_registers(IdaxSegmentRegisterDescriptor** out, size_t* count);
int idax_segment_register_value(uint64_t ea, const char* register_name,
                                int* has_value, uint64_t* out);
int idax_segment_default_register_value(uint64_t ea,
                                        const char* register_name,
                                        int* has_value, uint64_t* out);
int idax_segment_register_range(uint64_t ea, const char* register_name,
                                IdaxSegmentRegisterRange* out);
int idax_segment_previous_register_range(
    uint64_t ea, const char* register_name,
    IdaxSegmentRegisterRange* out, int* has_value);
int idax_segment_register_ranges(const char* register_name,
                                 IdaxSegmentRegisterRange** out,
                                 size_t* count);
int idax_segment_register_range_index(uint64_t ea, const char* register_name,
                                      size_t* out, int* has_value);
int idax_segment_split_register_range(uint64_t ea, const char* register_name,
                                      int has_value, uint64_t value,
                                      int source);
int idax_segment_remove_register_range(uint64_t ea,
                                       const char* register_name);
int idax_segment_set_default_segment_register_named(
    uint64_t ea, const char* register_name, int has_value, uint64_t value);
int idax_segment_set_default_segment_register_for_all_named(
    const char* register_name, int has_value, uint64_t value);
int idax_segment_set_default_data_segment(int has_value, uint64_t value);
int idax_segment_set_register_at_next_code(
    uint64_t search_start, uint64_t maximum, const char* register_name,
    int has_value, uint64_t value);
int idax_segment_copy_register_ranges(const char* destination_register,
                                      const char* source_register,
                                      int map_selectors_to_addresses);
/* ═══════════════════════════════════════════════════════════════════════════
 * Function (ida::function)
 * ═══════════════════════════════════════════════════════════════════════════ */

/** Flat C representation of a function snapshot. */
typedef struct IdaxFunction {
    uint64_t start;
    uint64_t end;
    char*    name;         /**< malloc'd, free with idax_free_string */
    int      bitness;
    int      returns;
    int      is_library;
    int      is_thunk;
    int      is_visible;
    uint64_t frame_local_size;
    uint64_t frame_regs_size;
    uint64_t frame_args_size;
} IdaxFunction;
/** Free strings inside an IdaxFunction. */
void idax_function_free(IdaxFunction* func);
int idax_function_at(uint64_t ea, IdaxFunction* out);
int idax_function_by_index(size_t index, IdaxFunction* out);
int idax_function_count(size_t* out);
int idax_function_create(uint64_t start, uint64_t end, IdaxFunction* out);
int idax_function_remove(uint64_t ea);