bindings/rust/idax-sys/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxSegmentRegisterDescriptor"]
        [::std::mem::size_of::<IdaxSegmentRegisterDescriptor>() - 24usize];
    ["Alignment of IdaxSegmentRegisterDescriptor"]
        [::std::mem::align_of::<IdaxSegmentRegisterDescriptor>() - 8usize];
    ["Offset of field: IdaxSegmentRegisterDescriptor::name"]
        [::std::mem::offset_of!(IdaxSegmentRegisterDescriptor, name) - 0usize];
    ["Offset of field: IdaxSegmentRegisterDescriptor::bit_width"]
        [::std::mem::offset_of!(IdaxSegmentRegisterDescriptor, bit_width) - 8usize];
    ["Offset of field: IdaxSegmentRegisterDescriptor::is_code"]
        [::std::mem::offset_of!(IdaxSegmentRegisterDescriptor, is_code) - 16usize];
    ["Offset of field: IdaxSegmentRegisterDescriptor::is_data"]
        [::std::mem::offset_of!(IdaxSegmentRegisterDescriptor, is_data) - 20usize];
};
impl Default for IdaxSegmentRegisterDescriptor {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[doc = " Copied half-open segment-register range; source uses the public enum order."]
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct IdaxSegmentRegisterRange {
    pub start: u64,
    pub end: u64,
    pub has_value: ::std::os::raw::c_int,
    pub value: u64,
    pub source: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxSegmentRegisterRange"]
        [::std::mem::size_of::<IdaxSegmentRegisterRange>() - 40usize];
    ["Alignment of IdaxSegmentRegisterRange"]
        [::std::mem::align_of::<IdaxSegmentRegisterRange>() - 8usize];
    ["Offset of field: IdaxSegmentRegisterRange::start"]
        [::std::mem::offset_of!(IdaxSegmentRegisterRange, start) - 0usize];
    ["Offset of field: IdaxSegmentRegisterRange::end"]
        [::std::mem::offset_of!(IdaxSegmentRegisterRange, end) - 8usize];
    ["Offset of field: IdaxSegmentRegisterRange::has_value"]
        [::std::mem::offset_of!(IdaxSegmentRegisterRange, has_value) - 16usize];
    ["Offset of field: IdaxSegmentRegisterRange::value"]
        [::std::mem::offset_of!(IdaxSegmentRegisterRange, value) - 24usize];
    ["Offset of field: IdaxSegmentRegisterRange::source"]
        [::std::mem::offset_of!(IdaxSegmentRegisterRange, source) - 32usize];
};
unsafe extern "C" {
    #[doc = " Free strings inside an IdaxSegment (does NOT free the struct itself)."]
    pub fn idax_segment_free(seg: *mut IdaxSegment);
}
unsafe extern "C" {
    pub fn idax_segment_register_descriptors_free(
        values: *mut IdaxSegmentRegisterDescriptor,
        count: usize,
    );
}
unsafe extern "C" {
    pub fn idax_segment_register_ranges_free(values: *mut IdaxSegmentRegisterRange);
}
unsafe extern "C" {
    pub fn idax_segment_at(ea: u64, out: *mut IdaxSegment) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_by_name(
        name: *const ::std::os::raw::c_char,
        out: *mut IdaxSegment,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_by_index(index: usize, out: *mut IdaxSegment) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_count(out: *mut usize) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_create(
        start: u64,
        end: u64,
        name: *const ::std::os::raw::c_char,
        class_name: *const ::std::os::raw::c_char,
        type_: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_remove(ea: u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_set_name(
        ea: u64,
        name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_set_class(
        ea: u64,
        class_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_set_type(ea: u64, type_: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_set_permissions(
        ea: u64,
        read: ::std::os::raw::c_int,
        write: ::std::os::raw::c_int,
        exec: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_set_bitness(ea: u64, bits: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_comment(
        ea: u64,
        repeatable: ::std::os::raw::c_int,
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_set_comment(
        ea: u64,
        text: *const ::std::os::raw::c_char,
        repeatable: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_resize(ea: u64, new_start: u64, new_end: u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_move(ea: u64, new_start: u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_next(ea: u64, out: *mut IdaxSegment) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_prev(ea: u64, out: *mut IdaxSegment) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_set_default_segment_register(
        ea: u64,
        register_index: ::std::os::raw::c_int,
        value: u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_set_default_segment_register_for_all(
        register_index: ::std::os::raw::c_int,
        value: u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_registers(
        out: *mut *mut IdaxSegmentRegisterDescriptor,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_register_value(
        ea: u64,
        register_name: *const ::std::os::raw::c_char,
        has_value: *mut ::std::os::raw::c_int,
        out: *mut u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_default_register_value(
        ea: u64,
        register_name: *const ::std::os::raw::c_char,
        has_value: *mut ::std::os::raw::c_int,
        out: *mut u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_register_range(
        ea: u64,
        register_name: *const ::std::os::raw::c_char,
        out: *mut IdaxSegmentRegisterRange,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_previous_register_range(
        ea: u64,
        register_name: *const ::std::os::raw::c_char,
        out: *mut IdaxSegmentRegisterRange,
        has_value: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_register_ranges(
        register_name: *const ::std::os::raw::c_char,
        out: *mut *mut IdaxSegmentRegisterRange,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_register_range_index(
        ea: u64,
        register_name: *const ::std::os::raw::c_char,
        out: *mut usize,
        has_value: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_split_register_range(
        ea: u64,
        register_name: *const ::std::os::raw::c_char,
        has_value: ::std::os::raw::c_int,
        value: u64,
        source: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_remove_register_range(
        ea: u64,
        register_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_set_default_segment_register_named(
        ea: u64,
        register_name: *const ::std::os::raw::c_char,
        has_value: ::std::os::raw::c_int,
        value: u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_set_default_segment_register_for_all_named(
        register_name: *const ::std::os::raw::c_char,
        has_value: ::std::os::raw::c_int,
        value: u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_set_default_data_segment(
        has_value: ::std::os::raw::c_int,
        value: u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_set_register_at_next_code(
        search_start: u64,
        maximum: u64,
        register_name: *const ::std::os::raw::c_char,
        has_value: ::std::os::raw::c_int,
        value: u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_segment_copy_register_ranges(
        destination_register: *const ::std::os::raw::c_char,
        source_register: *const ::std::os::raw::c_char,
        map_selectors_to_addresses: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
#[doc = " Flat C representation of a function snapshot."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxFunction {
    pub start: u64,
    pub end: u64,
    #[doc = "< malloc'd, free with idax_free_string"]
    pub name: *mut ::std::os::raw::c_char,
    pub bitness: ::std::os::raw::c_int,
    pub returns: ::std::os::raw::c_int,
    pub is_library: ::std::os::raw::c_int,
    pub is_thunk: ::std::os::raw::c_int,
    pub is_visible: ::std::os::raw::c_int,
    pub frame_local_size: u64,
    pub frame_regs_size: u64,
    pub frame_args_size: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxFunction"][::std::mem::size_of::<IdaxFunction>() - 72usize];
    ["Alignment of IdaxFunction"][::std::mem::align_of::<IdaxFunction>() - 8usize];
    ["Offset of field: IdaxFunction::start"][::std::mem::offset_of!(IdaxFunction, start) - 0usize];
    ["Offset of field: IdaxFunction::end"][::std::mem::offset_of!(IdaxFunction, end) - 8usize];
    ["Offset of field: IdaxFunction::name"][::std::mem::offset_of!(IdaxFunction, name) - 16usize];
    ["Offset of field: IdaxFunction::bitness"]
        [::std::mem::offset_of!(IdaxFunction, bitness) - 24usize];
    ["Offset of field: IdaxFunction::returns"]
        [::std::mem::offset_of!(IdaxFunction, returns) - 28usize];
    ["Offset of field: IdaxFunction::is_library"]
        [::std::mem::offset_of!(IdaxFunction, is_library) - 32usize];
    ["Offset of field: IdaxFunction::is_thunk"]
        [::std::mem::offset_of!(IdaxFunction, is_thunk) - 36usize];
    ["Offset of field: IdaxFunction::is_visible"]
        [::std::mem::offset_of!(IdaxFunction, is_visible) - 40usize];
    ["Offset of field: IdaxFunction::frame_local_size"]
        [::std::mem::offset_of!(IdaxFunction, frame_local_size) - 48usize];
    ["Offset of field: IdaxFunction::frame_regs_size"]
        [::std::mem::offset_of!(IdaxFunction, frame_regs_size) - 56usize];
    ["Offset of field: IdaxFunction::frame_args_size"]
        [::std::mem::offset_of!(IdaxFunction, frame_args_size) - 64usize];
};
impl Default for IdaxFunction {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    #[doc = " Free strings inside an IdaxFunction."]
    pub fn idax_function_free(func: *mut IdaxFunction);
}
unsafe extern "C" {
    pub fn idax_function_at(ea: u64, out: *mut IdaxFunction) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_function_by_index(index: usize, out: *mut IdaxFunction) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_function_count(out: *mut usize) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_function_create(
        start: u64,
        end: u64,
        out: *mut IdaxFunction,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_function_remove(ea: u64) -> ::std::os::raw::c_int;
}
